--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Visual JavaScript Library",
   "main": "dist/citron.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
